# devkits

./: .gitignore  CMakeLists.txt  Dockerfile  README.en.md  README.md  build.sh  docker_build.sh
cmake/: BuildInfo.cmake  Options.cmake  ProjectBoost.cmake  ProjectFFmpeg.cmake  ProjectJsonRpcCpp.cmake  ProjectLibzdb.cmake  ProjectMysqlClient.cmake  ProjectOpenCV.cmake  ProjectPCL.cmake  ProjectQt.cmake  ProjectSQLite3.cmake  ProjectYamlCpp.cmake
cmake/scripts/: buildinfo.cmake
cmake/templates/: BuildInfo.h.in
docs/libdevcore/: index.en.md  index.md  libdevcore.md  log.en.md  log.md
example/: CMakeLists.txt  config.ini  example.cpp  libdevcore_demo.cpp  libgui_demo.cpp
gui/: CMakeLists.txt
libdevcore/: CMakeLists.txt  Common.h  Exception.h  Exceptions.h  Log.cpp  Log.h  ThreadPool.h  Utility.cpp  Utility.h
libgui/: CMakeLists.txt  gui.cpp  gui.h  mainwindow.cpp  mainwindow.h
libinitializer/: CMakeLists.txt  Common.h  Initializer.cpp  Initializer.h  InitializerInterface.h  LogInitializer.cpp  LogInitializer.h
libvideo/: BaseCapture.cpp  BaseCapture.h  CMakeLists.txt  OpencvCapture.cpp  OpencvCapture.h
main/: CMakeLists.txt  Common.h  main.cpp
test/: CMakeLists.txt  receiver.cpp  receiver.h  test-transpond.cpp
test/data/: config.ini
test/tools/: Common.h  Options.cpp  Options.h
test/unittests/: main.cpp  test_main.cpp
test/unittests/libdevcore/: test_devcore.cpp  test_log.cpp
test/unittests/libinitializer/: test_initializer.cpp
